[package]
name = "advent"
version = "0.1.0"
authors = ["Scott Dunifon <sdunifon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
serde = "1.0.117"
reqwest = { version = "0.10.9", features = ["json", "blocking"] }
error-chain = "0.12.4"
regex = "1.4.2"
lazy_static = "1.4.0"
